--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hello world</h1>
     <h1>biji kuda</h1>
+    <input type="text" name="name" id="nama" required>
   </body>
 </html>
