--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <h1>biji kuda</h1>
-    <input type="text" name="name" id="nama" required>
+    <input type="text" name="name" id="nama" required />
   </body>
 </html>
