--- a/frontend/admin/login.html
+++ b/frontend/admin/login.html
@@ -74,7 +74,7 @@
                     "loggedUser",
                     JSON.stringify(res.data)
                   );
-                  window.location.href = "index.php";
+                  window.location.href = "Home.html";
                   alert("login successfuly");
                 } else {
                   alert("Invalid Role");
