add join to trasanction

--- a/frontend/Member/Tampilan_transaksi.html
+++ b/frontend/Member/Tampilan_transaksi.html
@@ -75,6 +75,8 @@
               return;
             }
 
+            console.log(data);
+
             data.forEach((trx) => {
               if (
                 keyword &&
