--- a/frontend/admin/cashieredit.html
+++ b/frontend/admin/cashieredit.html
@@ -18,7 +18,6 @@
                         <img src="./../../public/img/logo.png" alt="" style="height: 200px;">
                     </div>
                     <div class="menu">
-                         <div class="menu">
                         <div class="DashBoard">
                            <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
                         </div>
@@ -43,7 +42,6 @@
 
                     </div>
                 </div>
-                <!-- Main Dashboard -->
                 <div class="MainBoard">
                     <!-- Header -->
                     <div class="header">
@@ -74,9 +72,11 @@
 
                                 <button class="edit-btn">Edit</button>
                             </div>
+                        </div>
                     </div>
-            </div>
-        </div>
-    </div>
+                </div>
+            </div>   <!-- Main Dashboard -->
+      </div>
+</div>
 </body>
 </html>
