--- a/frontend/admin/register.html
+++ b/frontend/admin/register.html
@@ -84,7 +84,7 @@
                   "registeredUser",
                   JSON.stringify(res.data)
                 );
-                window.location.href = "index.php";
+                window.location.href = "Home.html";
                 alert("Register successfuly");
               }
             },
