Update tampilan kasirr.. belom nyambung login js nya ke index sama setelah selesai transaksi dan mau nambah nya tuh gak bisa dan gak mau muncul di index nya

--- a/frontend/Member/index.html
+++ b/frontend/Member/index.html
@@ -6,26 +6,23 @@
     <title>GYMini | Dashboard Member</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="../style/member/style.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   </head>
   <body>
     <!-- TOP BAR -->
-     hauiiii
     <header class="topbar">
       <div class="profile-info">
         <img src="./../assets/logo member.png" alt="User Icon" />
         <span id="greeting"></span>
       </div>
       <div class="membership-status">Active Class A Membership</div>
+      <div class="logout">
+        <button id="logout">logout</button>
+      </div>
     </header>
-    
     <!-- MAIN CONTENT -->      
-    <div class="logout">
-      <button id="logout">logout</button>
-    </div>
     <main class="welcome-container">
       <div class="welcome-box horizontal">
         <div class="logo-side">
