Added Membership Display and edit. Fixed display on all frontends (redisplay logo, fix div closing tag gore)

--- a/frontend/admin/login.html
+++ b/frontend/admin/login.html
@@ -15,7 +15,7 @@
     <div class="login-container">
       <div class="login-box">
         <div class="logo">
-          <img src="./../../public/img/logo.png" alt="" />
+          <img src="../assets/logo.png" alt="" />
         </div>
         <h1>LOGIN</h1>
 
