--- a/frontend/admin/Home.html
+++ b/frontend/admin/Home.html
@@ -15,7 +15,7 @@
                 <div class="Sidebar">
                     <div class="FH">
                         <div class="logo">
-                        <img src="./../../public/img/logo.png" alt="" style="height: 200px;">
+                        <img src="../assets/logo.png" alt="" style="height: 200px;">
                     </div>
                     <div class="menu">
                         <div class="DashBoard">
