--- a/frontend/admin/MemberEdit.html
+++ b/frontend/admin/MemberEdit.html
@@ -8,148 +8,87 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="MainCont">
-      <div class="SecCont">
-        <!-- Home -->
-        <div class="HomeCont">
-          <!-- Sidebar -->
-          <div class="Sidebar">
-            <div class="FH">
-              <div class="logo">
-                <img
-                  src="./../../public/img/logo.png"
-                  alt=""
-                  style="height: 200px"
-                />
-              </div>
-              <div class="menu">
-                <div class="DashBoard">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>Dashboard</p></a
-                    ></b
-                  >
-                </div>
-                <div class="UserData">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>MEMBER</p></a
-                    ></b
-                  >
-                </div>
-                <div class="CashiersData">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>Cashier Data</p></a
-                    ></b
-                  >
-                </div>
-                <div class="TransREport">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>Transacation Report</p></a
-                    ></b
-                  >
-                </div>
-                <div class="Member2">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>Member Membership</p></a
-                    ></b
-                  >
-                </div>
-                <div class="MemPlans">
-                  <b
-                    ><a href="" style="text-decoration: none; color: black"
-                      ><p>Membership Plans</p></a
-                    ></b
-                  >
-                </div>
-              </div>
-              <div class="SH"></div>
+<div class="MainCont">
+  <div class="SecCont">
+    <!-- Home -->
+    <div class="HomeCont">
+      <!-- Sidebar -->
+      <div class="Sidebar">
+        <div class="FH">
+          <div class="logo">
+            <img src="../assets/logo.png" alt="" style="height: 200px;" />
+          </div>
+          <div class="menu">
+            <div class="DashBoard">
+              <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
             </div>
-            <!-- Main Dashboard -->
-            <div class="MainBoard">
-              <!-- Header -->
-              <div class="header">
-                <div class="DashbordDesc" style="padding-left: 30px">
-                  <p style="font-size: 30px">MEMBER</p>
-                </div>
-                <div
-                  class="Profile"
-                  style="
-                    padding-right: 20px;
-                    display: flex;
-                    justify-content: space-evenly;
-                    align-items: center;
-                    width: 15%;
-                  "
-                >
-                  <div class="Name">
-                    <p>
-                      Welcome <br />
-                      Manager 0076
-                    </p>
-                  </div>
-                  <div
-                    class="ProfilePic"
-                    style="
-                      background-color: black;
-                      height: 50px;
-                      width: 50px;
-                      border-radius: 50px;
-                      align-items: center;
-                      justify-content: center;
-                      display: flex;
-                    "
-                  >
-                    <p style="color: aliceblue">O<<</p>
-                  </div>
-                </div>
-              </div>
-              <div class="MainBoardBody">
-                <div
-                  class="SeccondBoardBody"
-                  style="
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                  "
-                >
-                  <div class="card">
-                    <form action="" id="editTITIT">
-                      <label>Name</label>
-                      <input type="text" value="" id="name" name="nama" />
+            <div class="UserData">
+              <b><a href="" style="text-decoration: none; color: black;"><p>MEMBER</p></a></b>
+            </div>
+            <div class="CashiersData">
+              <b><a href="" style="text-decoration: none; color: black;"><p>Cashier Data</p></a></b>
+            </div>
+            <div class="TransREport">
+              <b><a href="" style="text-decoration: none; color: black;"><p>Transacation Report</p></a></b>
+            </div>
+            <div class="Member2">
+              <b><a href="" style="text-decoration: none; color: black;"><p>Member Membership</p></a></b>
+            </div>
+            <div class="MemPlans">
+              <b><a href="" style="text-decoration: none; color: black;"><p>Membership Plans</p></a></b>
+            </div>
+          </div>
+          <div class="SH"></div>
+        </div>
+      </div>
 
-                      <label>No Telephone</label>
-                      <input type="text" id="notelp" name="noTelp" />
-
-                      <label>Tanggal Lahir</label>
-                      <input type="text" id="tLahir" name="tglLahir" />
-
-                      <label>Jenis Kelamin</label>
-                      <select name="jk" id="JK" aria-readonly="">
-                        <option value="L">Laki Laki</option>
-                        <option value="P">Perempuan</option>
-                      </select>
-                      <label>Member ID</label>
-                      <input
-                        type="text"
-                        id="MemName"
-                        name="member_id"
-                        readonly
-                      />
-
-                      <button class="edit-btn">Edit</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
+      <!-- Main Dashboard -->
+      <div class="MainBoard">
+        <div class="header">
+          <div class="DashbordDesc" style="padding-left: 30px;">
+            <p style="font-size: 30px;">Edit Member</p>
+          </div>
+          <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
+            <div class="Name">
+              <p>Welcome <br> Manager 0076</p>
+            </div>
+            <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
+              <p style="color: aliceblue;">O&lt;&lt;</p>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+        <div class="MainBoardBody">
+          <div class="SeccondBoardBody" style="display: flex; justify-content: center; align-items: center;">
+            <div class="card">
+              <form action="" id="editTITIT">
+                <label>Name</label>
+                <input type="text" value="" id="name" name="nama" />
+
+                <label>No Telephone</label>
+                <input type="text" id="notelp" name="noTelp" />
+
+                <label>Tanggal Lahir</label>
+                <input type="text" id="tLahir" name="tglLahir" />
+
+                <label>Jenis Kelamin</label>
+                <select name="jk" id="JK">
+                  <option value="L">Laki Laki</option>
+                  <option value="P">Perempuan</option>
+                </select>
+
+                <label>Member ID</label>
+                <input type="text" id="MemName" name="member_id" readonly />
+
+                <button class="edit-btn">Edit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div> <!-- Close MainBoard -->
+    </div> <!-- Close HomeCont -->
+  </div> <!-- Close SecCont -->
+</div> <!-- Close MainCont -->
+
     <script>
       $(document).ready(() => {
         function LoadDatabyID() {
