--- a/frontend/admin/membership.html
+++ b/frontend/admin/membership.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/ADMIN/admin-display.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="MainCont">
-        <div class="SecCont">
-            <!-- Home -->
-            <div class="HomeCont">
-                <!-- Sidebar -->
-                <div class="Sidebar">
-                    <div class="FH">
-                        <div class="logo">
-                        <img src="./../../public/img/logo.png" alt="" style="height: 200px;">
+<div class="MainCont">
+    <div class="SecCont">
+        <!-- Home -->
+        <div class="HomeCont">
+            <!-- Sidebar -->
+            <div class="Sidebar">
+                <div class="FH">
+                    <div class="logo">
+                        <img src="../assets/logo.png" alt="" style="height: 200px;">
                     </div>
-                     <div class="menu">
+                    <div class="menu">
                         <div class="DashBoard">
-                           <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
+                            <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
                         </div>
                         <div class="UserData">
                             <b><a href="" style="text-decoration: none; color: black;"><p>MEMBER</p></a></b>
@@ -37,65 +38,138 @@
                             <b><a href="" style="text-decoration: none; color: black;"><p>Membership Plans</p></a></b>
                         </div>
                     </div>
-                    <div class="SH">
+                    <div class="SH"></div>
+                </div>
+            </div> <!-- Close Sidebar -->
 
+            <!-- Main Dashboard -->
+            <div class="MainBoard">
+                <!-- Header -->
+                <div class="header">
+                    <div class="DashbordDesc" style="padding-left: 30px;">
+                        <p style="font-size: 30px;">Membership Plans</p>
+                    </div>
+                    <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
+                        <div class="Name">
+                            <p>Welcome <br> Manager 0076</p>
+                        </div>
+                        <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
+                            <p style="color: aliceblue;">O&lt;&lt;</p>
+                        </div>
                     </div>
                 </div>
-                <!-- Main Dashboard -->
-                <div class="MainBoard">
-                    <!-- Header -->
-                    <div class="header">
-                        <div class="DashbordDesc" style="padding-left: 30px;">
-                            <p style="font-size: 30px;">Membership Plans</p>
-                        </div>
-                        <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
-                            <div class="Name">
-                                <p>Welcome <br> Manager 0076</p>
-                            </div>
-                            <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
-                                <p style="color: aliceblue;">O<<</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="MainBoardBody">
-                        <div class="SeccondBoardBody">
-                            <div class="TableAndInput" style="width: 100%; height: 100%;">
-                                <div class="table">
-                                    <table style="border-collapse: collapse; width: 100%; text-align: center;">
-                                <thead>
-                                    <tr style="background-color: #3f729b; color: white;">
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">ID Paket</th>
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">Nama Paket</th>
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">Harga</th>
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">Durasi</th>
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">Deskripsi</th>
-                                        <th style="padding: 10px; border: 2px solid #2e5984;">Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr style="background-color: #aac4e0;">
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">CST001</td>
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">Paket bicep meledak</td>
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">1000</td>
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">14 Bulan </td>
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">Paket Bicep Meledak + Coach seumur hidup</td>
-                                        <td style="padding: 10px; border: 2px solid #2e5984;">
-                                        <button style="background-color: #3f91cc; color: white; border: none; padding: 5px 10px; margin-right: 5px; border-radius: 4px; cursor: pointer;">Edit</button>
-                                        <button style="background-color: #e74c3c; color: white; border: none; padding: 5px 10px; border-radius: 4px; cursor: pointer;">Delete</button>
-                                        </td>
-                                    </tr>
-                                </tbody>
+                <div class="MainBoardBody">
+                    <div class="SeccondBoardBody">
+                        <div class="TableAndInput" style="width: 100%; height: 100%;">
+                            <div class="table">
+                                <table style="border-collapse: collapse; width: 100%; text-align: center;">
+                                    <thead>
+                                        <tr style="background-color: #3f729b; color: white;">
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">ID Paket</th>
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">Nama Paket</th>
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">Harga</th>
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">Durasi (hari)</th>
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">Deskripsi</th>
+                                            <th style="padding: 10px; border: 2px solid #2e5984;">Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="tBodi">
+                                    </tbody>
                                 </table>
-                                </div>
-                                <div class="button" style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center;">
-                                    <button style="width: 200px; height: 30px; background-color: green; border: none; border-radius: 10px;"><p>Add Data</p></button>
-                                </div>
-                                
+                            </div>
+                            <div class="button" style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center;">
+                                <button style="width: 200px; height: 30px; background-color: green; border: none; border-radius: 10px;"><p>Add Data</p></button>
                             </div>
                         </div>
                     </div>
-            </div>
-        </div>
-    </div>
+                </div>
+            </div> <!-- Close MainBoard -->
+        </div> <!-- Close HomeCont -->
+    </div> <!-- Close SecCont -->
+</div> <!-- Close MainCont -->
+
+
+    <script>
+         $(document).ready(() => {
+          //button to add user
+
+        function loadMembership(keyword = "") {
+          $.ajax({
+            url: "http://localhost/gymini/backend/api/membership_plan/get-membership-plan.php",
+            method: "GET",
+            dataType: "json",
+            success: function (response) {
+              const tbody = $("#tBodi");
+              tbody.empty();
+
+              const data = Array.isArray(response) ? response : response.data;
+
+              if (!Array.isArray(data)) {
+                console.error("Format data tidak sesuai");
+                return;
+              }
+
+              console.log(data);
+
+              data.forEach((membership) => {
+                tbody.append(`
+                        <tr style="background-color: #aac4e0">
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                          ${membership.plan_id}
+                        </td>
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                          ${membership.nama_paket}
+                        </td>
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                          ${membership.harga_paket}
+                        </td>
+                       
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                          ${membership.durasi_hari}
+                        </td>
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                          ${membership .deskripsi}
+                        </td>
+                        <td style="padding: 10px; border: 2px solid #2e5984">
+                           <a href="MembershipEdit.html?id=${membership.plan_id}" style="text-decoration: none;">
+                          <button
+                            style="
+                              background-color: #3f91cc;
+                              color: white;
+                              border: none;
+                              padding: 5px 10px;
+                              margin-right: 5px;
+                              border-radius: 4px;
+                              cursor: pointer;
+                            "
+                          > Edit
+                          </button>
+                        </a>
+                          <button
+                            style="
+                              background-color: red;
+                              color: white;
+                              border: none;
+                              padding: 5px 10px;
+                              margin-right: 5px;
+                              border-radius: 4px;
+                              cursor: pointer;
+                            "
+                          >
+                            Delete
+                          </button>
+                        </td>
+                      </tr>
+                                `);
+              });
+            },
+            error: function (err) {
+              console.error("Gagal ambil data membership:", err);
+            },
+          });
+        }
+        loadMembership();
+      });
+    </script>
 </body>
 </html>
