--- a/frontend/admin/membershipEdit.html
+++ b/frontend/admin/membershipEdit.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/ADMIN/adduser.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="MainCont">
-        <div class="SecCont">
-            <!-- Home -->
-            <div class="HomeCont">
-                <!-- Sidebar -->
-                <div class="Sidebar">
-                    <div class="FH">
-                        <div class="logo">
-                        <img src="./../../public/img/logo.png" alt="" style="height: 200px;">
+<div class="MainCont">
+    <div class="SecCont">
+        <!-- Home -->
+        <div class="HomeCont">
+            <!-- Sidebar -->
+            <div class="Sidebar">
+                <div class="FH">
+                    <div class="logo">
+                        <img src="../assets/logo.png" alt="" style="height: 200px;">
                     </div>
-                     <div class="menu">
+                    <div class="menu">
                         <div class="DashBoard">
-                           <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
+                            <b><a href="" style="text-decoration: none; color: black;"><p>Dashboard</p></a></b>
                         </div>
                         <div class="UserData">
                             <b><a href="" style="text-decoration: none; color: black;"><p>MEMBER</p></a></b>
@@ -37,50 +38,120 @@
                             <b><a href="" style="text-decoration: none; color: black;"><p>Membership Plans</p></a></b>
                         </div>
                     </div>
-                    <div class="SH">
+                    <div class="SH"></div>
+                </div>
+            </div> <!-- Close Sidebar -->
 
+            <!-- Main Dashboard -->
+            <div class="MainBoard">
+                <!-- Header -->
+                <div class="header">
+                    <div class="DashbordDesc" style="padding-left: 30px;">
+                        <p style="font-size: 30px;">Edit Membership Plans</p>
+                    </div>
+                    <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
+                        <div class="Name">
+                            <p>Welcome <br> Manager 0076</p>
+                        </div>
+                        <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
+                            <p style="color: aliceblue;">O&lt;&lt;</p>
+                        </div>
                     </div>
                 </div>
-                <!-- Main Dashboard -->
-                <div class="MainBoard">
-                    <!-- Header -->
-                    <div class="header">
-                        <div class="DashbordDesc" style="padding-left: 30px;">
-                            <p style="font-size: 30px;">CASHIER</p>
-                        </div>
-                        <div class="Profile" style="padding-right: 20px; display: flex; justify-content: space-evenly; align-items: center; width: 15%;">
-                            <div class="Name">
-                                <p>Welcome <br> Manager 0076</p>
-                            </div>
-                            <div class="ProfilePic" style="background-color: black; height: 50px; width: 50px; border-radius: 50px; align-items: center; justify-content: center; display: flex;">
-                                <p style="color: aliceblue;">O<<</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="MainBoardBody">
-                        <div class="SeccondBoardBody" style="display: flex; justify-content: center; align-items: center;">
-                            <div class="card">
-
+                <div class="MainBoardBody">
+                    <div class="SeccondBoardBody" style="display: flex; justify-content: center; align-items: center;">
+                        <div class="card">
+                            <form action="" id="editTITIT">
                                 <label>Plan ID</label>
-                                <input type="text">
+                                <input type="text" readonly id="plan_id" name="plan_id">
 
                                 <label>Name</label>
-                                <input type="text">
+                                <input type="text" id="nama_paket" name="nama_paket">
 
                                 <label>Harga</label>
-                                <input type="text">
+                                <input type="text" id="harga_paket" name="harga_paket">
 
-                                <label>Durasi</label>
-                                <input type="text">
-                            
-                                 <label>Deskripsi</label>
-                                <input type="text">
+                                <label>Durasi (hari)</label>
+                                <input type="text" id="durasi_hari" name="durasi_hari">
+
+                                <label>Deskripsi</label>
+                                <input type="text" name="deskripsi" id="deskripsi">
 
                                 <button class="edit-btn">Edit</button>
-                            </div>
+                            </form>
+                        </div>
                     </div>
-            </div>
-        </div>
-    </div>
+                </div>
+            </div> <!-- Close MainBoard -->
+        </div> <!-- Close HomeCont -->
+    </div> <!-- Close SecCont -->
+</div> <!-- Close MainCont -->
+
+    <script>
+       $(document).ready(() => {
+        function LoadDatabyID() {
+          const params = new URLSearchParams(window.location.search);
+          const id = params.get("id");
+          console.log(id); // Output: 123
+
+          $.ajax({
+            url: `http://localhost/gymini/backend/api/membership_plan/get-membership-plan.php?id=${id}`,
+            method: "GET",
+            dataType: "json",
+            success: function (response) {
+              const data = Array.isArray(response) ? response : response.data;
+              console.log(data);
+              $("#plan_id").val(data.plan_id);
+              $("#nama_paket").val(data.nama_paket);
+              $("#harga_paket").val(data.harga_paket);
+              $("#durasi_hari").val(data.durasi_hari);
+              $("#deskripsi").val(data.deskripsi);
+              
+            },
+          });
+        }
+
+        LoadDatabyID();
+
+        const editTITIT = $("#editTITIT");
+
+        editTITIT.submit((e) => {
+          e.preventDefault();
+
+          const formData = editTITIT.serializeArray();
+
+          const formDataObj = {};
+
+          formData.forEach((field) => {
+            formDataObj[field.name] = field.value;
+          });
+
+          console.log(formData);
+          console.log(JSON.stringify(formDataObj));
+          $.ajax({
+            url: "http://localhost/gymini/backend/api/membership_plan/update-membership-plan.php",
+            type: "PATCH",
+            contentType: "application/json",
+            data: JSON.stringify(formDataObj),
+            success: (res) => {
+              if (res.status === 200) {
+                alert("Edit Successfuly");
+                window.location.href = "membership.html";
+              }
+            },
+            error: (xhr, status, error) => {
+              console.log(`Error: ${error}`);
+              console.log(`xhr: ${JSON.parse(xhr.responseText)}`);
+              console.log(`status: ${status}`);
+
+              const responseApi = JSON.parse(xhr.responseText);
+
+              console.log(responseApi.errors);
+            },
+          });
+        });
+      });
+
+    </script>
 </body>
 </html>
